# big-numerical-types-cpp

./: .gitignore  CMakeLists.txt  compile_flags.txt
include/ntype/: bigfloat.hpp  bigint.hpp  ints.hpp
include/ntype/utils/: algo.hpp  base.h  base256.hpp  debug_tools.hpp  math_parser.hpp
src/: bigint.cpp  math_parser.cpp
